started registration server call
