# server/api/user-utility/self/columnNames.js
@@ -1,0 +1,18 @@
+module.exports = {
+    id: 'id',
+    google_id: 'google_id',
+    first_name: 'first_name',
+    last_name: 'last_name',
+    profile_picture_url: 'profile_picture_url',
+    description: 'description',
+    admin: 'admin',
+    website: 'website',
+    email: 'email',
+    dietary_restriction: 'dietary_restriction',
+    vegan: 'vegan',
+    vegetarian: 'vegetarian',
+    lactose_intolerant: 'lactose_intolerant',
+    gluten_free: 'gluten_free',
+    additional_diet: 'additional_diet',
+    registered: 'registered'
+}
